--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <!--
+Project1-About Me
+Name: Ryan Coutts
+Submitted: 05/16/24
+
 I declare that the following source code was written by me, or provided
 by the instructor for this project. I understand that copying source
 code from any other source, providing source code to another student, 
