Add style design to page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ in a zero grade, a permanent record on file and possibly immediate failure of th
         <main>
             <header>
                 <h1>Ryan Coutts</h1>
-                <img src="./profile_pic.png" alt="A picture of me">
+                <img src="./images/profile_pic.png" alt="A picture of me">
             </header>
             <section id="personal-info">
                 <h2>Personal Info</h2>
