Add additional style to page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ in a zero grade, a permanent record on file and possibly immediate failure of th
         <main>
             <header>
                 <h1>Ryan Coutts</h1>
-                <img src="./images/profile_pic.png" alt="A picture of me">
             </header>
             <section id="personal-info">
+                <img class="float-right my-picture" src="./images/my_photo.jpg" alt="A picture of me">
                 <h2>Personal Info</h2>
                 <ul>
                     <li><strong>Major:</strong> Software Engineering</li>
@@ -44,22 +44,22 @@ in a zero grade, a permanent record on file and possibly immediate failure of th
             </section>
             <section id="haiku">
                 <h2>Last Man Standing</h2>
-                <p>This is a heartbreaking Post-apocalyptic poem written from the perspective of the only person who survives an AI takeover of the world:</p>
+                <p class="indent">This is a heartbreaking post-apocalyptic poem written from the perspective of the only person who survives an AI takeover of the world:</p>
                 <p id="poem">Robots everywhere<br>They think I am one of them<br>When will they find out?</p>
             </section>
             <section id="essay">
                 <h2>My Personal Interests</h2>
-                <p>
+                <p class="indent">
                     I really enjoy coding. Coding is a way for me to combine my logical thinking with my creativity, which I don't get to do in many other activities. 
                     I feel very lucky to have discovered this interest of mine, although I sometimes wish I found it earlier. 
                     I hope and pray that AI does not make coding completely obsolete any time soon.
                 </p>
-                <p>
+                <p class="indent">
                     Another one of my hobbies is playing video games. One game in particular that I really enjoy is Super Smash Bros, which my friends and I play together often.
                     I've found that video games can be pretty addicting though, so I've had to learn to limit myself in how much time I spend playing them. 
                     I still consider this a casual hobby though. 
                 </p>
-                <p>
+                <p class="indent">
                     Finally, I've recently taken up running as a hobby for myself. I go on 30-40 minute jogs three times a week in the morning. I've found that it helps a lot to just
                     keep my mood up, especially if I'm feeling stressed or anxious about stuff that's going on in my life.
                 </p>
@@ -68,7 +68,7 @@ in a zero grade, a permanent record on file and possibly immediate failure of th
                 <h2>Class Schedule</h2>
                 <table>
                     <tr>
-                        <th></th>
+                        <th ></th>
                         <th>Monday</th>
                         <th>Tuesday</th>
                         <th>Wednesday</th>
@@ -170,23 +170,16 @@ in a zero grade, a permanent record on file and possibly immediate failure of th
 </html>
 
 <!--
-    --SELF GRADE--
-HEADER               A
-PERSONAL INFO        A
-FAVE BOOKS           A
-HAIKU                A
-ESSAY                A
+--SELF GRADE--
+BODY        A
+NAME        A
+PORTRAIT    A
+HEADINGS    A
+SCHEDULE    A
 
-SCHEDULE             A
-
---EXTRA ITEMS COMPLETED--Minimum of 5
-REPEATING BKG IMG (2pts)            NO
-CHANGE FONT (2pts)                  YES
-RT ALIGN PHOTO (2pts)               NO
-INDENT/CENTER HAIKU (2pts)          YES
-HYPERLINKS UNDERLINE ONLY ON HOVER  YES
-
-TABLE-TEXT ALIGN (2pts)             NO
-TABLE-COLOR CODE (2pts)             YES
-TABLE-EQUAL COL WIDTH (2pts)        YES
+--EXTRA CREDIT COMPLETED--
+FLOATING DIV (5pts)    YES
+STRIPED TABLE (5pts)   YES
+MODAL PORTRAIT (10pts) NO
+ARTISTIC MERIT (10pts) NO
 -->
